Updating Gradle and dependencies. Adding README documentation